--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.522.0",
+    "motion": "^12.19.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
