--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
     "dev:frontend": "next dev",
     "dev:backend": "convex dev",
-    "predev": "convex dev --until-success && convex dashboard",
+    "predev": "convex dev --until-success && convex dev --once --run-sh \"node setup.mjs --once\" && convex dashboard",
     "build": "next build",
     "start": "next start",
     "lint": "pnpm eslint ./src --fix &&  pnpm prettier --write ./src && next lint"
   },
   "dependencies": {
-    "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/auth": "^0.0.81",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -72,6 +72,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jose": "^6.0.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.13",
