--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ next-env.d.ts
 
 # Ignored for the template, you probably want to remove it:
 package-lock.json
+
+# clerk configuration (can include secrets)
+/.clerk/
