--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "pnpm eslint ./src --fix &&  pnpm prettier --write ./src && next lint"
   },
   "dependencies": {
-    "@convex-dev/auth": "^0.0.81",
+    "@clerk/nextjs": "^6.23.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
