--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "pnpm eslint ./src --fix &&  pnpm prettier --write ./src && next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^2.2.0",
     "@clerk/nextjs": "^6.23.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -58,6 +59,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.0",
     "sonner": "^2.0.5",
+    "svix": "^1.67.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.67"
