--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm-run-all --parallel dev:frontend dev:backend",
-    "dev:frontend": "next dev",
-    "dev:backend": "convex dev",
-    "predev": "convex dev --until-success && convex dev --once --run-sh \"node setup.mjs --once\" && convex dashboard",
     "build": "next build",
-    "start": "next start",
-    "lint": "pnpm eslint ./src --fix &&  pnpm prettier --write ./src && next lint"
+    "dev": "concurrently -k -n next,convex -c blue,green \"next dev --turbopack\" \"pnpm convex dev\"",
+    "lint": "pnpm prettier --write ./src && next lint --fix",
+    "start": "next start"
   },
   "dependencies": {
-    "@clerk/backend": "^2.2.0",
-    "@clerk/nextjs": "^6.23.0",
+    "@clerk/backend": "^2.4.2",
+    "@clerk/nextjs": "^6.25.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -44,42 +41,40 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "convex": "^1.23.0",
+    "concurrently": "^9.2.0",
+    "convex": "^1.25.2",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.522.0",
-    "motion": "^12.19.1",
-    "next": "15.3.4",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.5",
+    "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^3.0.3",
-    "recharts": "^3.0.0",
-    "sonner": "^2.0.5",
-    "svix": "^1.67.0",
+    "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^3.25.67"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^24.0.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.0.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "dotenv": "^16.4.7",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.3.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "jose": "^6.0.11",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
